src/components/Show/styles.module.scss
.imageWrapper {
  width: 190px;
  height: 280px;

  @media screen and (min-width: 980px){
    width: 290px;
    height: 430px;
  }

  img {
    width: 100%;
    height: 100%;
  }
}

.meta {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 15px;
}

.episodes {
  color: rgb(181, 181, 181);
  text-transform: uppercase;
  font-size: 12px;
  font-weight: bold;
  line-height: 24px;
  margin: 0;
}

.title {
  margin: 0;
  color: rgb(0, 0, 0);
}

.active {
  display: block;
}

.inactive {
  display: none;
}

